# libwindow

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  capture.c  capture_impl.h  window.c  window_impl.h
window/: capture.h  window.h
